<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sensor</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_device_sensor">Device Sensors</string>
    <string name="action_light">Light</string>
    <string name="action_accelerometer">Accelerometer</string>
    <string name="action_ambient_temp">Ambient Temperature</string>
    <string name="action_gravity">Gravity</string>
    <string name="action_gyroscope">Gyroscope</string>
    <string name="action_linear_acceleration">Linear Acceleration</string>
    <string name="action_magnetic_field">Magnetic Field</string>
    <string name="action_orientation">Orientation</string>
    <string name="action_pressure">Pressure</string>
    <string name="action_proximity">Proximity</string>
    <string name="action_relative_humidity">Relative Humidity</string>
    <string name="action_rotation_vector">Rotation Vector</string>
    <string name="textView_xaxis">X Axis:</string>
    <string name="textView_yaxis">Y Axis:</string>
    <string name="textView_zaxis">Z Axis:</string>
    <string name="textView_lightlevel">Light Level: </string>
    <string name="textView_airPressure">Air Pressure: </string>
    <string name="textView_temperature">Temperature: </string>
    <string name="textView_distance">Distance: </string>
    <string name="textView_humidity">Humidity: </string>
    <string name="textView_NoSensorOnDevice">Sensor data not available on device.</string>
</resources>
